# kullflow

./: .gitignore  .prettierignore  .prettierrc  README.md  biome.json  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  typed-router.d.ts  vite.config.ts
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/image_worker/: Cargo.toml
src-tauri/crates/image_worker/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: image.rs  lib.rs  main.rs
src/assets/: bg-1.avif
src/components/: ToastContainer.vue
src/components/layout/: Header.vue
src/lib/: toast.ts
src/pages/: cull.vue  index.vue
