[package]
name = "kullflow"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kullflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = ["crates/*"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
urlencoding = "2.1.3"
mime_guess = "2.0.5"
mime = "0.3.17"
image_worker = { path = "crates/image_worker" }
tauri-plugin-os = "2"

[profile.dev]
incremental = false
opt-level = 0
debug = 0
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.image_worker]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
